@startuml tutor_platform_erd

!define PF_KEY(x) **PK & FK** x
!define P_KEY(x) **PK** x
!define F_KEY(x) **FK** x
!theme carbon-gray

skinparam arrow {
  Thickness 1
  Color #262626
  FontColor #262626
}

left to right direction

title Система вибору персонального репетитора - ER діаграма (3NF)

entity "User" as user {
  P_KEY(user_id)
  --
  email
  password_hash
  first_name
  last_name
  phone
  user_type
  registration_date
  date_of_birth
}

entity "Student" as student {
  PF_KEY(student_id)
  F_KEY(city_id)
  --
  school_grade
}

entity "Tutor" as tutor {
  PF_KEY(tutor_id)
  F_KEY(city_id)
  --
  years_experience
  education
  about_me
  online_available
  offline_available
  address
}

entity "Subject" as subject {
  P_KEY(subject_id)
  --
  named
  category
  description
}

entity "TeachingLevel" as teaching_level {
  P_KEY(level_id)
  --
  name
  position
  description
}

entity "City" as city {
  P_KEY(city_id)
  --
  name
  region
  country
}

entity "TutorSubject" as tutor_subject {
  P_KEY(tutor_subject_id)
  --
  F_KEY(tutor_id)
  F_KEY(subject_id)
  F_KEY(level_id)
  hourly_rate
}

entity "Schedule" as schedule {
  P_KEY(schedule_id)
  --
  F_KEY(tutor_id)
  date
  start_time
  end_time
  is_available
  created_at
}

entity "Booking" as booking {
  P_KEY(booking_id)
  --
  F_KEY(student_id)
  F_KEY(schedule_id)
  F_KEY(tutor_subject_id)
  format
  status
  created_at
}

entity "Review" as review {
  P_KEY(review_id)
  --
  F_KEY(booking_id)
  rating
  comment
  created_at
  is_anonymous
}

' --- ЗВ'ЯЗКИ ---

user ||--|| student : "ISA"
user ||--|| tutor : "ISA"

city ||--o{ student : "lives_in"
city ||--o{ tutor : "tutor_located_in"

' Послуги репетитора
tutor ||--o{ tutor_subject : "offers"
subject ||--o{ tutor_subject : "taught_as"
teaching_level ||--o{ tutor_subject : "at_level"

' Розклад
tutor ||--o{ schedule : "has_schedule"

' Бронювання (Змінено)
student ||--o{ booking : "books"
schedule ||--o| booking : "reserves_slot"
tutor_subject ||--o{ booking : "specifies_service"

' Відгуки (Змінено)
booking ||--o| review : "has_review"

@enduml